<resources>
    <string name="app_name">week_1_seminar</string>
    <string name="hello">Hello</string>
    <string name="Hello_world">Hello World!</string>
    <string name="title">Welcome to GO Android!</string>
    <string name="id">ID</string>
    <string name="id_hint">아이디를 입력하세요.</string>
    <string name="pw">PW</string>
    <string name="pw_hint">비밀번호를 입력하세요.</string>
    <string name="login">LOGIN</string>
    <string name="signup">SIGNUP</string>
    <string name="hobby">특기</string>
    <string name="hobby_hint">특기를 입력하세요</string>
    <string name="signupbtn">회원가입 완료</string>
    <string name="sign_up">sign up</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">이름</string>
    <string name="et_name">이름을 입력하세요.</string>
    <string name="st_home">홈</string>
    <string name="st_gallery">갤러리</string>
    <string name="st_search">검색</string>
    <string name="rv_title"> 🎧 이준희의 플레이리스트</string>
    <string name="wrong_input">정보 입력이 잘못되었습니다.</string>
    <string name="signup_complete">회원가입이 완료되었습니다.</string>
    <string name="login_complete">로그인 성공!</string>
    <string name="id_warning_message">ID 조건: 영문, 숫자가 포함되어야 하고 6~10글자 이내</string>
    <string name="password_warning_message">Password 조건: 영문, 숫자, 특수문자가 포함되어야 하고 6~12글자 이내</string>
    <string name="autologin">자동로그인</string>
</resources>